# mit

./: .env.example  .gitignore  README.md  chainlit.md  chainlit_app.py  pyproject.toml
.agent/skills/mit-agent-creator/: SKILL.md
data/network/api_ref/: endpoints.md
data/network/issues/: common_errors.md
docs/: ADDING_AGENTS.md  LOGGING_DESIGN.md  PRESENTATION.md
materials/auth/errors/: troubleshooting.md
materials/auth/oauth/: specs.md
materials/greeting/knowledge/: greeting_guide.md
scripts/: ingest.py  test_agent.py
src/mit/: __init__.py  config.py  graph.py  llm.py  logging.py  main.py  state.py
src/mit/agents/: __init__.py
src/mit/agents/auth/: __init__.py  agent.py  errors.py  oauth.py
src/mit/agents/greeting/: __init__.py  agent.py  knowledge.py
src/mit/agents/network/: __init__.py  agent.py  api_ref.py  issues.py
src/mit/core/: __init__.py  base_agent.py  coordinator.py  router.py  simple_agent.py
src/mit/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
src/mit/server/: __init__.py  app.py  schemas.py  streaming.py
tests/: __init__.py
